@@ -1,3 +1,8 @@
+[B]Version 2.7.8[/B]
+
+- Updated hulu search with speed improvements
+- disabled offsite search because hulu stopped providing offsite results
+
 [B]Version 2.7.7[/B]
 
 - Changed Hulu+ Filtering
